Fix flickering mouse over

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,6 @@
 .text-style {
   font-family: 'Nanum Gothic';
   font-weight: bold;
-  font-size: 28;
+  font-size: 26;
   user-select: none;
 }
